--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap');
+
+body {
+    width: 1200px;
+}
+
+h1 {
+    font-size: 20px;
+    font-family: DM Sans;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 0px;
+}
