--- a/src/styles/organisms.module.css
+++ b/src/styles/organisms.module.css
@@ -86,10 +86,100 @@
     align-items: flex-start;
     gap: 10px;
 }
+
+.modal_overlay {
+    position: fixed;
+    margin: auto;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal {
+    display: flex;
+    width: 500px;
+    height: fit-content;
+    padding: 30px;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+
+    border-radius: 10px;
+    background: #FFFFFF;
+}
+
+.modal_content {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 20px;
+    align-self: stretch;
+}
+
+.modal_content > h3 {
+    color: #5F5F5F;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.modal_head {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    align-self: stretch;
+}
+
+.modal_head > p {
+    color: #000000;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.modal_body {
+    display: flex;
+    padding: 20px;
+    flex-direction: column;
+    align-items: flex-start;
+    align-self: stretch;
+
+    border: 2px dashed #000;
+}
+
+.modal_body > p {
+    color: #000;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.modal_buttons {
+    display: flex;
+    align-items: flex-start;
+    gap: 10px;
+}
+
+.modal_close {
+    display: flex;
+    padding: 8px;
+    align-items: flex-start;
+
+    border: none;
+    border-radius: 20px;
+    background: #ECECEC;
+}
  
 h3 {
     font-size: 16px;
-    font-family: DM Sans;
     font-style: normal;
     font-weight: 700;
 
